Arreglo pequeño RAFFLES
Former-commit-id: 5531eb92254eb06140108072f56969f034fc54f0

--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -4799,9 +4799,10 @@ input:focus+span.help_info+div{
 	-o-border-radius:5px;
 	-ms-border-radius:5px;
 	-webkit-border-radius:5px;
-	top:-24PX;
+	top:-24px;
 	left:295px;
 	float:left;
+	background-color: #fff;
 }
 #frmProfile_ .messageHelp{
 	top:-25PX;
