filtros de busqueda
* arreglos de estilos css para checkbox en jquery ui
* traducciones
* controles
* agregados filtros de sexo y deseos a la busqueda. pendiente la edad


Former-commit-id: dd4149e31c520bcd73104df4fe108793efb4c6e9

--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -2219,12 +2219,13 @@ input[type="search"]:hover,input[type="search"]:focus{
 	outline:none;/*FIXED GOOGLE CHROME*/
 }
 
-input[type="checkbox"]+label.ui-state-default{
+/*input[type="checkbox"]+label.ui-state-default{
 	background-color:#ddd;
 }
 input[type="checkbox"]+label.ui-state-active{
 	background-color:#3DB5E8;
 }
+*/
 
 li.ui-autocomplete-person a.ui-state-focus{
 	height:50px;
