--- a/css/jquery-ui.smt.css
+++ b/css/jquery-ui.smt.css
@@ -111,3 +111,29 @@ button.smt-button::-moz-focus-inner{ border:0;padding:0; }/*reset extra padding 
 }
 .ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited { color: #444444; text-decoration: none; }
 .ui-front { z-index: 1000; }
+
+.ui-buttonset .ui-state-default {
+	border:1px solid #ddd;
+	background:#ddd;
+	font-weight:normal;
+	color:#444;
+	font-size:10px;
+}
+.ui-buttonset .ui-state-hover {
+	border:1px solid #bbb;
+	background:#bbb;
+	font-weight:normal;
+	color:#444;
+}
+.ui-buttonset .ui-state-active {
+	border:1px solid #3DB5E8;
+	background:#3DB5E8;
+	font-weight:normal;
+	color:#444;
+}
+.ui-buttonset .ui-state-active.ui-state-hover {
+	border:1px solid #5BC3EF;
+	background:#5BC3EF;
+	font-weight:normal;
+	color:#444;
+}
