wish on profile
Former-commit-id: 3cc62ee2c18c6e47621fdfb4e5d0d14ba7d2fb45 [formerly d7a5c2d47c2f69a85a4a33a4737ef27bf2f7e487]
Former-commit-id: 33036afe5856a6f9ddfba6801479c44da581c8f1

--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -2495,6 +2495,10 @@ form #frmProfileFormContainer>div{
 	padding:0px;
 }
 
+#frmProfile_ #wish_to label{
+	width: 50px;
+	display: inline-block;
+}
 /*defaults font size */
 .font_size1{
 	font-size:12px;
@@ -3523,6 +3527,7 @@ height: 150px;}
 	text-decoration: none;
 }
 #frmProfile_businessCardDiv .no-complete{ color: #F57133; }
+
 /*progress{
 	width: 90%;
 	-webkit-appearance: none;
