--- a/local/xdk/css/jquery.mobile.custom.css
+++ b/local/xdk/css/jquery.mobile.custom.css
@@ -68,7 +68,6 @@
 
 .ui-page .ui-header.ui-bar-f,.ui-page .ui-footer.ui-bar-f{
 	border:none;
-	background-color: #F5872D;
 	-webkit-box-shadow:0 0 5px #000;
 	-moz-box-shadow:0 0 5px #000;
 	box-shadow:0 0 5px #000;
@@ -76,8 +75,10 @@
     color:#fff;
 	font-weight:bold;
 	text-shadow:0 0 0;
+	background-color:#F57133;
 }
-.ui-page .ui-header.ui-bar-f{ border-bottom:1px solid #f72; }
+.ui-page .ui-header.ui-bar-f{
+	border-bottom:1px solid #f72; }
 .ui-page .ui-header.ui-bar-f a.ui-btn{ margin-top:4px; }
 .ui-page .ui-header.ui-bar-f h1{ padding-top:5px; }
 .ui-page .ui-header.ui-bar-f img{
@@ -87,9 +88,9 @@
 .ui-page .ui-footer.ui-bar-f .ui-btn:not([data-icon]) .ui-btn-inner{ padding:.775em 11px .5em; }
 
 .ui-header.ui-bar-f .ui-navbar .ui-btn,.ui-footer.ui-bar-f .ui-btn{
-	border:1px solid #77C574;
+	border:1px solid #03A993;
 	font-weight:bold;
-	color:#77C574;
+	color:#03A993;
 	background:-webkit-gradient(linear,left top,left bottom,color-stop(0%,#F7F8FD),color-stop(15%,#fff));
 	text-shadow:none;
 }
@@ -98,14 +99,14 @@
 	color:#444;
 }
 .ui-bar-f .ui-btn-active,.ui-footer.ui-bar-f .ui-btn-active{
-    background: #77C574;
-	/*background:#77C574 url(images/bg_btn_down_1x100.png) 50% 50% repeat-x;*/
+    background: #03A993;
+	/*background:#03A993 url(images/bg_btn_down_1x100.png) 50% 50% repeat-x;*/
 	color:#444;
 	text-shadow:none;
 	border-color:#fc8829;
 }
 #private-select .ui-btn-active{
-	/*background:#77C574 url(images/bg_btn_down_1x100.png) 50% 50% repeat-x;*/
+	/*background:#03A993 url(images/bg_btn_down_1x100.png) 50% 50% repeat-x;*/
     background: #3db8e1 url('tbum/white_arrow_left.png') no-repeat;
 	color:#444;
 	text-shadow:none;
@@ -119,7 +120,7 @@
 }
 .ui-btn-up-f,.ui-btn-hover-f{
 	border:1px solid #FC8829;
-	background:#77C574 url(images/bg_btn_up_1x100.png) 50% 50% repeat-x;
+	background:#03A993 url(images/bg_btn_up_1x100.png) 50% 50% repeat-x;
 	font-weight:normal;
 	color:#444;
 	text-shadow:0 0 0;
@@ -128,7 +129,7 @@
 	border:1px solid #FC8829;
 	font-weight:normal;
 	color:#444;
-	background:#77C574 url(images/bg_btn_down_1x100.png) 50% 50% repeat-x;
+	background:#03A993 url(images/bg_btn_down_1x100.png) 50% 50% repeat-x;
 	text-shadow:0 0 0;
 }
 .ui-btn-up-f,.ui-btn-hover-f,.ui-btn-down-f{
