--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -1236,7 +1236,7 @@ loader.s32,.loader.s32{
 	font-size:12px;
 	word-wrap:break-word;
 	padding-left:8px;
-	height:30px;
+/*	height:30px;*/
 }
 
 #infoList .costProduct{
