--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -1696,20 +1696,20 @@ input.password-field {
 .mobile .tag-container [tag] menu li.expand#users{
 	background-image:url('menu/bcard_over.png');
 }
-.tag-container [tag] menu li#like{
+/*.tag-container [tag] menu li#like{
 	background-image:url('menu/like.png?1');
-}
-.tag-container [tag] menu li#like:hover,
+}*/
+/*.tag-container [tag] menu li#like:hover,
 .mobile .tag-container [tag] menu li.expand#like{
 	background-image:url('menu/like_over.png?1');
-}
-.tag-container [tag] menu li#dislike{
+}*/
+/*.tag-container [tag] menu li#dislike{
 	background-image:url('menu/dislike.png?1');
-}
-.tag-container [tag] menu li#dislike:hover,
+}*/
+/*.tag-container [tag] menu li#dislike:hover,
 .mobile .tag-container [tag] menu li.expand#dislike{
 	background-image:url('menu/dislike_over.png?1');
-}
+}*/
 .tag-container [tag] menu li#comment{
 	background-image:url('menu/comment.png?1');
 }
