Singup Primer commit
Former-commit-id: 68d65272e1c1ad7ac17ef4972536ba9b3281f0fd

--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -433,3 +433,82 @@ li.userInList h3{
 	text-align: center;
 	vertical-align: bottom;
 }
+
+
+#page-signUp #fs-wrapper{
+	background-color: #EB5A28;
+}
+#page-signUp #scroller{
+	background-color: #EB5A28;
+}
+#page-signUp #frmRegister{
+	background-color: #EB5A28;
+}
+
+#page-signUp #name{
+	background-color: #EF7B53;
+	color: #FFF;
+}
+#page-signUp #name{
+	background-color: #EF7B53;
+	background:#EF7B53;
+
+}
+
+#page-signUp #logo_image {
+  text-align: center;
+  margin-left:0 auto;
+  margin-right:0 auto;
+  width: 20%;
+}
+
+.ui-body-c,
+.ui-overlay-c {
+	border:1px solid #aaa;
+	color: #FFF;
+	text-shadow:0 1px 0 #fff;
+	background:#EF7B53;
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #EF7B53 ), to( #eee )); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #EF7B53, #eee ); /* Chrome 10+, Saf5.1+ */
+	background-image:    -moz-linear-gradient( #EF7B53, #eee ); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #EF7B53, #eee ); /* IE10 */
+	background-image:      -o-linear-gradient( #EF7B53, #eee ); /* Opera 11.10+ */
+	background-image:         linear-gradient( #EF7B53, #eee );
+}
+
+#page-signUp #lastName{
+	background-color: #EF7B53;
+	color: #FFF;
+}
+
+#page-signUp #email{
+	background-color: #EF7B53;
+	color: #FFF;
+}
+
+#page-signUp #password{
+	background-color: #EF7B53;
+	color: #FFF;
+}
+
+#page-signUp #repassword{
+	background-color: #EF7B53;
+	color: #FFF;
+}
+
+#page-signUp ::-webkit-input-placeholder { /* WebKit browsers */
+    color:    #F7BDA9;
+}
+#page-signUp :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color:    #F7BDA9;
+   opacity:  1;
+}
+#page-signUp ::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color:    #F7BDA9;
+   opacity:  1;
+}
+#page-signUp :-ms-input-placeholder { /* Internet Explorer 10+ */
+   color:    #F7BDA9;
+}
+
+
