dialog terms on home
Former-commit-id: e61421e19e537d58fd3116104f4b67372cd9c739

--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -23,6 +23,7 @@
 	margin: 0 auto;
 	font-size: 16px;
 }
+#tagBum_info_msg a{ color: white !important; }
 @media (min-width: 600px){
 	.ui-box-home #noconection,
 	.ui-box-home ._tt{ 
