--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -499,16 +499,6 @@ li.userInList h3{
 	background-color: #EB5A28;
 }
 
-#page-signUp #name{
-	background-color: #EF7B53;
-	color: #FFF;
-}
-#page-signUp #name{
-	background-color: #EF7B53;
-	background:#EF7B53;
-
-}
-
 #page-signUp #logo_image {
   text-align: center;
   margin-left:0 auto;
@@ -516,38 +506,65 @@ li.userInList h3{
   width: 20%;
 }
 
-.ui-body-c,
-.ui-overlay-c {
-	border:1px solid #aaa;
-	color: #FFF;
+#page-signUp .ui-body-c{
+	border:1px solid #EF7B53;
 	text-shadow:0 1px 0 #fff;
 	background:#EF7B53;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #EF7B53 ), to( #eee )); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #EF7B53, #eee ); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #EF7B53, #eee ); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #EF7B53, #eee ); /* IE10 */
-	background-image:      -o-linear-gradient( #EF7B53, #eee ); /* Opera 11.10+ */
-	background-image:         linear-gradient( #EF7B53, #eee );
+}
+
+#page-signUp .ui-overlay-c{
+	border:1px solid #EF7B53;
+	text-shadow:0 1px 0 #fff;
+	background:#EF7B53;
+}
+
+#page-signUp .intext{
+	background-color: #EF7B53;
+	color: #FFF;
+	background-image: url('newdesign/presence60.png');
+	background-position: 0 2px;
+	background-repeat: no-repeat;
+	background-size: 30px 30px;
+	text-indent:35px;
+	box-sizing: border-box;
+	-webkit-box-sizing:border-box;
+	-moz-box-sizing: border-box;
+ }
+
+#page-signUp #name{
+	background-image: url('newdesign/presence60.png');
+	background-position: 0 2px;
 }
 
 #page-signUp #lastName{
-	background-color: #EF7B53;
-	color: #FFF;
+	background-image: none;
+	background-position: 0 2px;
+	text-indent:5px;
 }
 
 #page-signUp #email{
-	background-color: #EF7B53;
-	color: #FFF;
+	background-image: url('newdesign/mail_message60.png');
+	background-position: 0 2px;
 }
 
 #page-signUp #password{
-	background-color: #EF7B53;
-	color: #FFF;
+	background-image: url('newdesign/lock60.png');
+	background-position: 0 2px;
 }
 
 #page-signUp #repassword{
-	background-color: #EF7B53;
-	color: #FFF;
+	background-image: none;
+	background-position: 0 2px;
+}
+
+#page-signUp #gender{
+	background-image: url('newdesign/gender60.png');
+	background-position: 0 2px;
+}
+
+#page-signUp #phone{
+	background-image: url('newdesign/phone60.png');
+	background-position: 0 2px;
 }
 
 #page-signUp ::-webkit-input-placeholder { /* WebKit browsers */
@@ -565,4 +582,9 @@ li.userInList h3{
    color:    #F7BDA9;
 }
 
-
+#page-signUp ._tr{
+	display:table-cell;
+	margin:0 auto;
+	vertical-align:middle;
+	text-align:right;
+}
