Push para verificar cambio con ramon
Former-commit-id: 53f72a6e48b82ab654ec2ad16308b55e28d4d453

--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -525,6 +525,10 @@ li.userInList h3{
 	background:#EF7B53;
 }
 
+#page-signUp #msgPassword, #msgRequired, #msgCreatedAccount{
+	color: #FFF;
+}
+
 #page-signUp .ui-overlay-c{
 	border:1px solid #EF7B53;
 	text-shadow:0 1px 0 #fff;
