changes details product
Former-commit-id: 8730ae290ae20b3632abf5b548edf7fb3564db1f

--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -322,7 +322,8 @@
 	}
 }
 /*Find Friends and Friends*/
-#page-friendUser #menu, #page-friendSearch #menu{
+#page-friendUser #menu, #page-friendSearch #menu,
+#page-lstStore #menu, #page-detailsProducts #menu{
 	display: block;
 }
 #page-friendUser #scroller,#page-friendSearch #scroller{
